--- a/style_indexhtml.css
+++ b/style_indexhtml.css
@@ -2,4 +2,61 @@ body {
   background-image: linear-gradient(to right, lightgray 1px, transparent 1px),
     linear-gradient(to bottom, lightgray 1px, transparent 1px);
   background-size: 25px 25px; /* Розмір клітинки */
+  margin-left: 5%; /* Відступ зліва */
+}
+p1 {
+  font-family: 'Courier New',Courier, monospace;/* Шрифт */
+  font-size: 15px;/* Розмір шрифта */
+  color: rgb(2, 60, 16);/* Колір тексту */
+  text-align: center;/* Вирівнювання по центру */
+  margin-top: 10px; /* Відступ зверху */
+  margin-left: 3%; /* Відступ зліва */
+  font-weight: bold; /* Жирний шрифт */
+  /**width: 1px;	height: 1px; /* Розмір */
+  /**background: rgba(255, 204, 0, 0); /* Колір фону */
+  /**outline: 2px solid #000; /* Чорна рамка */
+  /**border: 3px solid #fff; /* Біла рамка */
+  /**border-radius: 1px; /* Радіус округлення */
+  font-style: italic
+}
+p {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 15px;
+  color: rgb(0, 0, 0);
+  margin-top: 20px;
+  margin-left: 1%;
+  font-weight: bold;
+}
+table {
+  border-collapse: collapse; /* Зливаючи рамки */
+  margin: left; /* Вирівнювання по центру */
+  margin-top: 20px; /* Відступ зверху */
+  border-radius: 10px; /* Радіус округлення */
+  border: 2px solid #000; /* Чорна рамка */
+  background-color: rgba(255, 255, 255, 0.8); /* Колір фону */
+  max-width: auto; /* Максимальна ширина таблиці */
+  min-width: 95%; /* Мінімальна ширина таблиці */
+  word-break: break-all;
+}
+h1 {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 35px;
+  color: rgb(0, 0, 0);
+  margin-top: 0%;
+  margin-left: 0%;
+  font-weight: bold;
+}
+button {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 20px;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  border-collapse: collapse; /* Зливаючи рамки */
+  margin: left; /* Вирівнювання */
+  margin-top: 0px; /* Відступ зверху */
+  border-radius: 5px; /* Радіус округлення */
+  border: 2px solid #000; /* Чорна рамка */
+  background-color: rgba(255, 255, 255, 0.8); /* Колір фону */
+  width: auto; 
+
 }
