--- a/TestJS/style.css
+++ b/TestJS/style.css
@@ -54,7 +54,7 @@ table {
   background-color: rgba(255, 255, 255, 0.8); /* Колір фону */
   max-width: auto; /* Максимальна ширина таблиці */
   min-width: 100%; /* Мінімальна ширина таблиці */
-  word-break: break-all;
+  word-break: break-word; /* Перенос слів, а якщо виставити break-all буде перенос по буквам*/ 
 }
 h1 {
   font-family: 'Courier New', Courier, monospace;
