--- a/javascript/TestJS/style.css
+++ b/javascript/TestJS/style.css
@@ -112,3 +112,12 @@ background-size: 100% 100%;
     background-color: rgb(125, 125, 125);
   }
 }
+#binary-hours, #binary-minutes, #binary-seconds {
+  font-family: 'webdings', webdings, monospace;
+  font-size: 20px;
+  color: rgb(0, 0, 0);
+  margin-top: 0px;
+  margin-left: 1%;
+  font-weight: bold;
+  word-break: break-word; /* Перенос слів, а якщо виставити break-all буде перенос по буквам*/ 
+}
